workshop03/demo/ingress/api-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v3-deploy
  namespace: api-ns
  labels:
    app: api-deploy
    version: v3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-deploy
      version: v3
  template:
    metadata:
      labels:
        app: api-deploy
        version: v3
    spec:
      containers:
        - name: fake-api
          image: chukmunnlee/fake-api:v1
          imagePullPolicy: IfNotPresent
          args:
            - v3
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-v3-svc
  namespace: api-ns
  labels:
    app: api-svc
spec:
  selector:
    app: api-deploy
    version: v3
  type: ClusterIP
  ports:
    - name: api-port
      port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-v3-ing
  namespace: api-ns
  labels:
    app: api-ing
  annotations:
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    ## ENABLE CANARY DEPLOYMENT
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: api.146.190.6.57.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-v3-svc
                port:
                  name: api-port
